[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/VERDANAB.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu/SelectCursor.gd" type="Script" id=2]
[ext_resource path="res://Assets/MainMenu/hand_cursor.png" type="Texture" id=3]
[ext_resource path="res://Scripts/MainMenu/Back.gd" type="Script" id=4]
[ext_resource path="res://Scripts/MainMenu/Continue.gd" type="Script" id=5]
[ext_resource path="res://Scripts/MainMenu/Option.gd" type="Script" id=6]
[ext_resource path="res://Scripts/MainMenu/Quit.gd" type="Script" id=7]
[ext_resource path="res://Assets/MainMenu/Title.png" type="Texture" id=8]
[ext_resource path="res://Audio/Musics/main_menu_background.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/Sounds/cursor_move.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/Sounds/confirm new-load.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/Sounds/confirm.wav" type="AudioStream" id=12]
[ext_resource path="res://Scripts/MainMenu/Tween.gd" type="Script" id=13]
[ext_resource path="res://Scripts/MainMenu/Credits.gd" type="Script" id=14]
[ext_resource path="res://Scripts/MainMenu/Volume.gd" type="Script" id=15]
[ext_resource path="res://Scripts/MainMenu/New.gd" type="Script" id=16]
[ext_resource path="res://Scripts/MainMenu/Start.gd" type="Script" id=17]
[ext_resource path="res://Scripts/MainMenu/BackNewGame.gd" type="Script" id=18]
[ext_resource path="res://Scripts/MainMenu/VolumeSlider.gd" type="Script" id=19]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Gender" type="OptionButton" parent="ColorRect"]
visible = false
margin_left = 144.0
margin_top = 184.0
margin_right = 344.0
margin_bottom = 211.0
custom_fonts/font = SubResource( 1 )
text = "Maschio"
items = [ "Maschio", null, false, 1, null, "Femmina", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="ColorRect"]
visible = false
margin_left = 144.0
margin_top = 224.0
margin_right = 273.0
margin_bottom = 255.0
custom_fonts/font = SubResource( 2 )
placeholder_text = "Nome"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="ColorRect"]
visible = false
margin_left = 146.0
margin_top = 500.0
custom_fonts/font = SubResource( 3 )
text = "INIZIA"
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="ColorRect"]
visible = false
margin_left = 282.071
margin_top = 500.0
margin_right = 388.071
margin_bottom = 527.0
custom_fonts/font = SubResource( 4 )
text = "INDIETRO"
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Sprite" parent="ColorRect"]
position = Vector2( 504.256, 115 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 250.0
margin_right = -150.0
margin_bottom = -150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainerM" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_right = 724.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuEntries" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainerM"]
margin_right = 724.0
margin_bottom = 200.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Label" parent="ColorRect/MarginContainer/VBoxContainerM/MenuEntries"]
margin_top = 14.0
margin_right = 724.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 5 )
text = "Nuova partita"
uppercase = true
script = ExtResource( 16 )

[node name="Continue" type="Label" parent="ColorRect/MarginContainer/VBoxContainerM/MenuEntries"]
margin_top = 49.0
margin_right = 724.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
text = "Continua"
uppercase = true
script = ExtResource( 5 )

[node name="Volume" type="Label" parent="ColorRect/MarginContainer/VBoxContainerM/MenuEntries"]
visible = false
margin_top = 70.0
margin_right = 724.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 5 )
text = "Volume"
uppercase = true
script = ExtResource( 15 )

[node name="VolumeSlider" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainerM/MenuEntries/Volume"]
visible = false
margin_left = 133.0
margin_top = 5.0
margin_right = 341.0
margin_bottom = 25.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Label" parent="ColorRect/MarginContainer/VBoxContainerM/MenuEntries"]
visible = false
margin_top = 87.0
margin_right = 724.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 5 )
text = "Indietro"
uppercase = true
script = ExtResource( 4 )

[node name="Option" type="Label" parent="ColorRect/MarginContainer/VBoxContainerM/MenuEntries"]
margin_top = 84.0
margin_right = 724.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 5 )
text = "Opzioni"
uppercase = true
script = ExtResource( 6 )

[node name="Credits" type="Label" parent="ColorRect/MarginContainer/VBoxContainerM/MenuEntries"]
margin_top = 119.0
margin_right = 724.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 5 )
text = "Crediti"
uppercase = true
script = ExtResource( 14 )

[node name="Quit" type="Label" parent="ColorRect/MarginContainer/VBoxContainerM/MenuEntries"]
margin_top = 154.0
margin_right = 724.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 5 )
text = "Esci dal gioco"
uppercase = true
script = ExtResource( 7 )

[node name="SelectCursor" type="Sprite" parent="ColorRect/MarginContainer/VBoxContainerM/MenuEntries"]
position = Vector2( -29.0089, 104.352 )
scale = Vector2( 1.13396, 1 )
texture = ExtResource( 3 )
script = ExtResource( 2 )

[node name="menu_cursor_sound" type="AudioStreamPlayer" parent="ColorRect/MarginContainer/VBoxContainerM/MenuEntries/SelectCursor"]
stream = ExtResource( 10 )
volume_db = -30.0

[node name="confirm_new_load_sound" type="AudioStreamPlayer" parent="ColorRect/MarginContainer/VBoxContainerM/MenuEntries/SelectCursor"]
stream = ExtResource( 11 )
volume_db = -15.0

[node name="option_confirm_sound" type="AudioStreamPlayer" parent="ColorRect/MarginContainer/VBoxContainerM/MenuEntries/SelectCursor"]
stream = ExtResource( 12 )
volume_db = -13.0

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -17.0
autoplay = true

[node name="Tween" type="Tween" parent="."]
script = ExtResource( 13 )

[node name="ErrorDialog" type="AcceptDialog" parent="."]
pause_mode = 2
margin_left = 396.818
margin_top = 270.306
margin_right = 620.818
margin_bottom = 378.306
popup_exclusive = true
window_title = "Errore"
dialog_text = "Non hai inserito un nome"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsDialog" type="AcceptDialog" parent="."]
margin_left = 368.0
margin_top = 168.0
margin_right = 672.0
margin_bottom = 498.0
popup_exclusive = true
window_title = "Crediti"
dialog_text = "Sviluppato e ideato da:
Damiano Palmisano
Cristina Matino

Assets e audio da OpenGameArt:
MrBeast
Dan Sevenstar -DontMind8-
Nemisys
Reemax
Jetrel & Redshrike
Daneeklu
Lanea Zimmerman
CleytonKauffman
Matthew Pablo
Axtoncrolley
Daniel Eddeland
Daniel Armstrong
XCVG
Andyjt"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="ColorRect/Gender" to="ColorRect/Start" method="_on_Gender_item_selected"]
[connection signal="text_changed" from="ColorRect/Name" to="ColorRect/Start" method="_on_Name_text_changed"]
[connection signal="pressed" from="ColorRect/Start" to="ColorRect/Start" method="_on_Start_pressed"]
[connection signal="pressed" from="ColorRect/BackButton" to="ColorRect/BackButton" method="_on_Back_pressed"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainerM/MenuEntries/Volume/VolumeSlider" to="ColorRect/MarginContainer/VBoxContainerM/MenuEntries/Volume/VolumeSlider" method="_on_VolumeSlider_value_changed"]
[connection signal="visibility_changed" from="ColorRect/MarginContainer/VBoxContainerM/MenuEntries/Quit" to="ColorRect/MarginContainer/VBoxContainerM/MenuEntries/SelectCursor" method="_on_Quit_visibility_changed"]
